# eai-toolbox

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-tests.yml
include/: eai.h  eai_cluster.h  eai_compat.h  eai_confusion_matrix.h  eai_csv_reader.h  eai_graph.h  eai_graph_dev.h  eai_int_math.h  eai_k_fold.h  eai_math.h  eai_model.h  eai_narray.h  eai_narray_builtin.h  eai_profile.h  eai_regression_metrics.h
src/: eai_cluster_kmeans.c  eai_cluster_kmedoids.c  eai_cluster_private.c  eai_cluster_private.h  eai_confusion_matrix.c  eai_csv_reader.c  eai_graph_dev.c  eai_int_math.c  eai_k_fold.c  eai_math.c  eai_ndarray_builtin.c  eai_profile.c  eai_regression_metrics.c
test/: eai_test_main.c
test/tests/: eai_cluster_test.c  eai_cluster_test.h  eai_csv_reader_test.c  eai_csv_reader_test.h  eai_evaluation_confusion_matrix_test.c  eai_evaluation_confusion_matrix_test.h  eai_graph_dev_test.c  eai_graph_dev_test.h  eai_graph_test.c  eai_graph_test.h  eai_k_fold_test.c  eai_k_fold_test.h  eai_math_test.c  eai_math_test.h  eai_narray_test.c  eai_narray_test.h  eai_profile_test.c  eai_profile_test.h
